--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "cross-env": "^7.0.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "php": "^1.0.2"
   }
 }
