--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "clear": "rd /s /q dist",
     "dev": "cross-env NODE_ENV=development webpack --watch --mode development",
-    "prod": "cross-env NODE_ENV=production webpack --mode production"
+    "prod": "cross-env NODE_ENV=production webpack --mode production",
+    "server" : "json-server --watch crm-backend/db.json --port=4545"
   },
   "author": "AlekseiDev",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "json-server": "^1.0.0-alpha.23",
     "php": "^1.0.2"
   }
 }
